--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node server.js",
         "dev": "node --watch server.js",
         "init-db": "node sql/seed.js",
-        "reset-db": "rm -f database.db && node sql/seed.js"
+        "reset-db": "rm -f database.db && node sql/seed.js",
+        "initTest-db": "node tests/setup.js"
     },
     "author": "",
     "license": "ISC",
